--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "pathum4u/api_request",
-    "description": "simple Lumen api request",
+    "description": "API Request for Multiple source With GuzzleHttp",
     "type": "library",
     "require": {
         "guzzlehttp/guzzle":  "^7.4"
