--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
     "autoload": {
         "psr-4": {
             "Pathum4u\\ApiRequest\\": "src/"
-        }
+        },
+        "files": [
+            "helpers/helpers.php"
+        ]
     },
     "authors": [
         {
